--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
     <header id="home">
         <!-- Replace with real image URL later -->
         <img src="https://via.placeholder.com/180" alt="รูปโปรไฟล์" class="profile-img" onerror="this.src='https://ui-avatars.com/api/?name=Student+Profile&size=180&background=2563eb&color=fff'">
-        <h1>สวัสดี, ฉันชื่อ [ชื่อ-นามสกุล ของคุณ]</h1>
-        <p>นักศึกษาคณะ [ระบุคณะ/สาขา] ผู้มีความหลงใหลในด้านเทคโนโลยีและการออกแบบเว็บไซต์</p>
+        <h1>สวัสดี,ฉันชื่อ นายนิธิพัฒน์ ถวิลครบุรี</h1>
+        <p>นักศึกษาคณะ [คณะวิทยาศาสตร์และเทคโนโลยี สาขาเทคโนโลยีสารสนเทศ] นักศึกษาของวิชา Digtal Platform</p>
     </header>
 
     <!-- About Section -->
@@ -225,18 +225,16 @@
         <div class="about-content">
             <div>
                 <h3>ประวัติการศึกษา</h3>
-                <p>ปัจจุบันกำลังศึกษาอยู่ที่ [ชื่อมหาวิทยาลัยของคุณ] ชั้นปีที่ [ระบุปีการศึกษา]</p>
+                <p>ปัจจุบันกำลังศึกษาอยู่ที่ มหาวิทยาลัยราชภัฏพระนคร ชั้นปีที่ 1 </p>
                 <p style="margin-top: 1rem;">ฉันมีความสนใจในการพัฒนาเว็บไซต์และการแก้ปัญหาด้วยโค้ด มีความกระตือรือร้นที่จะเรียนรู้เทคโนโลยีใหม่ๆ อยู่เสมอ</p>
             </div>
             <div>
                 <h3>ทักษะและความสามารถ (Skills)</h3>
                 <div class="skill-tags">
-                    <span class="skill-tag">HTML5 / CSS3</span>
-                    <span class="skill-tag">JavaScript</span>
-                    <span class="skill-tag">Responsive Design</span>
-                    <span class="skill-tag">UI/UX Design</span>
-                    <span class="skill-tag">Graphic Design</span>
-                    <span class="skill-tag">Communication</span>
+                    <span class="skill-tag">เล่นบาส</span>
+                    <span class="skill-tag">เกม</span>
+                    <span class="skill-tag">คณิตศาสตร์</span>
+                    <span class="skill-tag">ทำอาหาร</span>
                 </div>
             </div>
         </div>
@@ -249,22 +247,22 @@
             <div class="contact-card">
                 <i class="fa-solid fa-envelope"></i>
                 <h3>อีเมล</h3>
-                <p>example@email.com</p>
+                <p>6810122113006@pnru.ac.th</p>
             </div>
             <div class="contact-card">
                 <i class="fa-solid fa-phone"></i>
                 <h3>เบอร์โทรศัพท์</h3>
-                <p>08x-xxx-xxxx</p>
+                <p>091-234-5678</p>
             </div>
             <div class="contact-card">
                 <i class="fa-brands fa-line"></i>
                 <h3>Line ID</h3>
-                <p>@mylineid</p>
+                <p>@ไม่บอก</p>
             </div>
             <div class="contact-card">
                 <i class="fa-brands fa-github"></i>
                 <h3>GitHub</h3>
-                <p>github.com/yourname</p>
+                <p>github.com/Nitipat</p>
             </div>
         </div>
     </section>
