--- a/index.html
+++ b/index.html
@@ -269,8 +269,9 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 [ชื่อของคุณ]. All Rights Reserved.</p>
+        <p>&copy; 2024 [Nitipat]. All Rights Reserved.</p>
     </footer>
 
 </body>
 </html>
+
